--- a/test/ekonomika.html
+++ b/test/ekonomika.html
@@ -29,110 +29,8 @@ layout: default
   </div>
 </div>
 
-___
 Piráti usilují o co nejrychlejší efektivní pomoc všem postiženým skupinám obyvatel. Soustředíme se zejména na pomoc lidem, na které vláda zapomíná a na pomoc živnostníkům, za které nekopou žádné svazy asociace a jiné profesní organizace.
 
-Mikuláš Ferjenčík
-___
-
-{% capture md %} 
-## Ekonomické úlevy dle návrhu Pirátů
-
-Současná situace má již teď znatelné dopady na ekonomiku ČR , a to jak na firmy tak jednotlivce. Lze předpokládat nutnost masivních investic do ekonomiky ze strany státu. V tuto chvíli je však namístě řešit především úlevy na straně firem a soukromníků.
-
-### Předvídatelnost a jistota vládních kroků - milníky dalšího postupu
-
-* Ekonomická aktivita byla v minulých třech týdnech v České republice naprosto zmražena.
-* Tento stav není dlouhodobě udržitelný.
-* Vláda musí představit další kroky, dílčí milníky, na základě kterých bude rámcově postupovat a případně na základě jakých parametrů bude uvolňovat současná omezení.
-* Nepožadujeme detailní jízdní řád, ale elementární předvídatelnost a jistotu v krocích, které mohou živnostníci, podnikatelé ale i zaměstnanci v dalších týdnech a měsících očekávat.
-
-### Nezapomenout na nejohroženější skupiny - plošná podpora jako možné řešení
-
-* V situaci plošně utlumené ekonomické aktivity by měla přijít dostatečně rychlá, jednoduše administrovatelná, předvídatelná a spravedlivá pomoc ze strany státu, která nevynechá žádnou z dílčích skupin obyvatel.
-* Současné dávkové a jiné systémy nepovažujeme za dostatečné
-* Části populace může skrze současně nastavené a představené rámce propadnout, právě z důvodu nedostatečného parametrického nastavení.
-* Z těchto důvodů jsme navrhli a představili základní parametry plošné akutní pomoci fyzickým osobám - tedy zvýšit a umožnit předčasnou výplatu daňové slevy na poplatníka jako rychlou a efektivní pomoc, která pomůže přestát období epidemie. ([Komentář Tomáše Martínka](https://www.google.com/url?q=https://www.piratskelisty.cz/clanek-3003-tomas-martinek-zvyseni-danove-slevy-na-poplatnika-a-jeji-predcasne-vyplaceni-pomuze-obcanum-ekonomicky-ustat-obdobi-epidemie&sa=D&ust=1586788455946000))
-
-### Odvodová povinnost OSVČ - odpustit živnostníkům část nákladů ⇒ HOTOVO
-
-* Každý živnostník i ten který nevydělá musí nyní platit minimální odvody, resp. zálohy každý měsíc v pevně stanovené výši. Živnostníci budou muset sáhnout do rezerv, které nemají nebo je použijí na chod vlastních domácností. Důvod proč nemají teď příjmy je způsoben vyšší mocí + krizovými nástroji státu, kterými chráníme veřejné zdraví, nikoliv jejich nezdar v podnikání ⇒ odpustit OSVČ povinné zálohy na soc-zab a zdrav-poj za dobu trvání nouzového stavu.
-⇒ HOTOVO, bohužel byly opomenuty osoby bez zdanitelných příjmů, které povinně musí odvádět zdravotní pojištění; ve sněmovně jsme je navrhovali zahrnout, vládní koalice to zamítla
-
-### Ošetřovné pro OSVČ ⇒ HOTOVO
-
-* OSVČ na rozdíl o zaměstnanaců v současně nastaveném systému/zákoně nemají právo na tzv. ošetřovné.
-* Řešením by bylo zavedení nové nepojistné dávky pro OSVČ, která by měla denní dávku v době trvání ošetřovného.
-
-### Úvěry a záruční programy Českomoravské záruční a rozvojové banky
-
-* Vláda představila a schválila několik propramů překlenovací provozních úvěrů administrované Českomoravskou záruční a rozvojovou bankou (banka MPO).
-* Úvěrový program COVID1 poskytnul bezúročné úvěry s odkladem splátek na 1 rok a dobou splácení až další 2 roky. Problém však byla jeho nízká alokace, ve spojení s vysokou minimální výší úvěry a neskutečně silný institut ručení - podepsání bianco směnky s avalem, která poskytuje věřiteli ohromnou sílu nad dlužníkem.
-* Záruční program COVID2 poskytnul státní záruky a kompenzaci úroků nad úvěry komerčních bank. Jeho alokace byla vyčerpána v prvním dni od spuštění. Největší problém bylo vynechání Pražských podnikatelů v důsledku návaznosti na Evropské strukturální fondy.
-
-### Kurz-arbeit (částečná nezaměstnanost z důvodu nízkého odbytu - snaha udržet místa)
-
-* Nad rámec postupu skrze § 115 zákona o zaměstnanosti byl představen cílený program zaměstnanosti nazvaný Antivirus na základě § 120 zákona o zaměstnanosti.
-
-Program Antivirus je ale schválen jak program krátkodobý a nezakládá právní jistotu a předvídatelnost do dalších měsíců.
-
-Právě předvídatelnost a kontinuita vládních kroků je minimálním standardem ve vyspělých zemí
-
-* V současnosti je možnost postupovat podle § 115 zákona o zaměstnanosti - ten ale vyžaduje smlouvu mezi zaměstnavatelem a úřadem práce, která je podmíněna souhlasem Vlády.
-
-Nadto příspěvek na jednoho zaměstnance je nízký - pouze 0,125 násobek průměrné mzdy (cca 4250 Kč).
-
-* Naším požadavkem je upravit tento instrument co se týče úrovně byrokracie (snížit) + a změnit parametr podpory, tak aby byl v případě potřeby rychle mobilizovatelný a po vzoru německé modelu byla založena jistá tradice tohoto nástroje.
-
-### Nemocenská u lidí v karanténě
-
-* Náklad na nemocenskou dnes kryje v prvních 14 dnech nemoci, resp. karantény zaměstnavatel.
-* Ve vládou schváleném programu Antivirus je poměrná část (80%) náhrady mzdy proplácena státem.
-
-Program Antivirus je ale schválen jak program krátkodobý a nezakládá právní jistotu a předvídatelnost do dalších měsíců.
-
-Náhrada mzdy za dobu karantény jednotlivých zaměstnanců musí být proplácena státem i v dlouhodobém horizontu
-
-* Zaměstnavatelé tak mohou své zaměstnance od čerpání karantény až odrazovat.
-* Chceme všechny povinně motivovat k tomu, aby byla pravidla pro ochranu veřejného zdraví dodržovat a nikdo na tom “netratil”. Jak zaměstnanci tak zaměstnavatelé → stát by měl převzít náklady na nemocenskou v případě karantény již od 1. dne nemoci.
-
-### Podpora práce na dálku
-
-* Snížit pohyb lidí na úřadech (podpořit zřízení datových schránek - novela MOJE daně odstraňuje povinnost používat na vše zřízené datové schránky).
-
-* Zvážit dočasné umožnění práce z domu i u prací, kde to jinak neumožňují bezpečnostní a jiné pracovní předpisy a zákony.
-
-* Umožnit zaměstnancům pracovní volno na zvyšování kvalifikace například pomocí online kurzů.
-
-{% endcapture %}
-
-{% capture md2 %} 
-
-                <h3>Články k tématu:</h3>
-
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","ekonomika"  %}
-
-                  <ul>
-                  {% for post in sorted-posts limit: 10 %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
-                  {% endfor %}
-                  </ul>
-
-Ekonomika a finance
-kontrola  - Jirka V.
-
-Základní body:
-Předvídatelnost a jistota vládních kroků - milníky dalšího postupu
-Nezapomenout na nejohroženější skupiny 
- 
-Odpustit OSVČ bez příjmů povinné odvody ⇒ HOTOVO
-Prodloužit ošetřovné a rozšířit ho i na OSVČ ⇒ HOTOVO
-Podpořit kurzarbeit – zvýšit podíl státu na mzdových nákladech a zjednodušit byrokracii ⇒ HOTOVO (částečně)
-Odlehčit zaměstnavatelům v zasažených odvětvích odpuštěním sociálních a daňových odvodů z práce za zaměstnance
-Poskytovat bezúročné půjčky i v menším objemu, než 500 000 Kč
-Nemocenskou za lidi v karanténě musí hradit stát ze 100% i nad rámec programu antivirus
-
-Po rozkliknutí:
 Ekonomické úlevy dle návrhu Pirátů
 Současná situace má již teď znatelné dopady na ekonomiku ČR , a to jak na firmy tak jednotlivce. Lze předpokládat nutnost masivních investic do ekonomiky ze strany státu. V tuto chvíli je však namístě řešit především úlevy na straně firem a soukromníků.
 Předvídatelnost a jistota vládních kroků - milníky dalšího postupu
@@ -154,32 +52,35 @@ OSVČ na rozdíl o zaměstnanaců v současně nastaveném systému/zákoně nem
 Řešením by bylo zavedení nové nepojistné dávky pro OSVČ, která by měla denní dávku v době trvání ošetřovného.
  
  
-Úvěry a záruční programy  Českomoravské záruční a rozvojové banky
+<h3>Úvěry a záruční programy  Českomoravské záruční a rozvojové banky</h3>
 Vláda představila a schválila několik propramů překlenovací provozních úvěrů administrované Českomoravskou záruční a rozvojovou bankou (banka MPO).
 Úvěrový program COVID1 poskytnul bezúročné úvěry s odkladem splátek na 1 rok a dobou splácení až další 2 roky. Problém však byla jeho nízká alokace, ve spojení s vysokou minimální výší úvěry a neskutečně silný institut ručení - podepsání bianco směnky s avalem, která poskytuje věřiteli ohromnou sílu nad dlužníkem.
 Záruční program COVID2 poskytnul státní záruky a kompenzaci úroků nad úvěry komerčních bank. Jeho alokace byla vyčerpána v prvním dni od spuštění. Největší problém bylo vynechání Pražských podnikatelů v důsledku návaznosti na Evropské strukturální fondy.
-Odvodová povinnost - odpustit část mzdových nákladů u zaměstnavatelů
-Mzdové náklady na jednotku práce jsou v ČR obecně vysoké.
-Náklady celkem jsou 1,34 násobek hrubé mzdy.
-Za situace, kdy jsou podniky zavřené, je utlumená výroba a zakázek se nedostává avšak je potřeba zachovat pracovní místa, resp. zaměstnance na pracovních postech tak, aby návrat do normálu byl co nejhladší.
-Navrhujeme tedy ulevit zasaženým zaměstnavatelům v jejich cash-flow; nevydávat náklady nad “hrubou mzdu”. Prominout odvody na soc. pojištění + DPFO a nepokutovat za opožděná tvrzení.
-Kurz-arbeit (částečná nezaměstnanost z důvodu nízkého odbytu - snaha udržet místa)
-Příbuzné opatření jako opatření odpuštění odvodů za zaměstnance.
-Nad rámec postupu skrze § 115 zákona o zaměstnanosti byl představen cílený program zaměstnanosti nazvaný Antivirus na základě § 120 zákona o zaměstnanosti.
-Program Antivirus je ale schválen jak program krátkodobý a nezakládá právní jistotu a předvídatelnost do dalších měsíců. 
-Právě předvídatelnost a kontinuita vládních kroků je minimálním standardem ve vyspělých zemí
-V současnosti je možnost postupovat podle § 115 zákona o zaměstnanosti - ten ale vyžaduje smlouvu mezi zaměstnavatelem a úřadem práce, která je podmíněna souhlasem Vlády. 
-Nadto příspěvek na jednoho zaměstnance je nízký - pouze 0,125 násobek průměrné mzdy (cca 4250 Kč).
-Naším požadavkem je upravit tento instrument co se týče úrovně byrokracie (snížit) + a změnit parametr podpory, tak aby byl v případě potřeby rychle mobilizovatelný a po vzoru německé modelu byla založena jistá tradice tohoto nástroje. 
-Nemocenská u lidí v karanténě
-Náklad na nemocenskou dnes kryje v prvních 14 dnech nemoci, resp. karantény zaměstnavatel. 
-Ve vládou schváleném programu Antivirus je poměrná část (80%) náhrady mzdy proplácena státem. 
-Program Antivirus je ale schválen jak program krátkodobý a nezakládá právní jistotu a předvídatelnost do dalších měsíců. 
-Náhrada mzdy za dobu karantény jednotlivých zaměstnanců musí být proplácena státem i v dlouhodobém horizontu
-Zaměstnavatelé tak mohou své zaměstnance od čerpání karantény až odrazovat.
-Chceme všechny povinně motivovat k tomu, aby byla pravidla pro ochranu veřejného zdraví dodržovat a nikdo na tom “netratil”. Jak zaměstnanci tak zaměstnavatelé → stát by měl převzít náklady na nemocenskou v případě karantény již od 1. dne nemoci.
-Podpora práce na dálku
-Umožnění práce na dálku ve veřejné sféře včetně zastupitelů (možnost jednání výborů měst vzdáleně, hlasování per rollam například po e-mailu).
-Snížit pohyb lidí na úřadech (podpořit zřízení datových schránek - novela MOJE daně odstraňuje povinnost používat na vše zřízené datové schránky).
-Zvážit dočasné umožnění práce z domu i u prací, kde to jinak neumožňují bezpečnostní a jiné pracovní předpisy a zákony.
-Umožnit zaměstnancům pracovní volno na zvyšování kvalifikace například pomocí online kurzů.
+
+<h3>Kurz-arbeit (částečná nezaměstnanost z důvodu nízkého odbytu - snaha udržet místa)</h3>
+<ul>
+  <li>Nad rámec postupu skrze § 115 zákona o zaměstnanosti byl představen cílený program zaměstnanosti nazvaný Antivirus na základě § 120 zákona o zaměstnanosti.<br>
+Program Antivirus je ale schválen jak program krátkodobý a nezakládá právní jistotu a předvídatelnost do dalších měsíců.<br>
+Právě předvídatelnost a kontinuita vládních kroků je minimálním standardem ve vyspělých zemí</li>
+  <li>V současnosti je možnost postupovat podle § 115 zákona o zaměstnanosti - ten ale vyžaduje smlouvu mezi zaměstnavatelem a úřadem práce, která je podmíněna souhlasem Vlády.</li>
+  <li>Nadto příspěvek na jednoho zaměstnance je nízký - pouze 0,125 násobek průměrné mzdy (cca 4250 Kč).</li>
+  <li>Naším požadavkem je upravit tento instrument co se týče úrovně byrokracie (snížit) + a změnit parametr podpory, tak aby byl v případě potřeby rychle mobilizovatelný a po vzoru německé modelu byla založena jistá tradice tohoto nástroje.</li>
+</ul>
+
+<h3>Nemocenská u lidí v karanténě</h3>
+<ul>
+  <li>Náklad na nemocenskou dnes kryje v prvních 14 dnech nemoci, resp. karantény zaměstnavatel.</li>
+  <li>Ve vládou schváleném programu Antivirus je poměrná část (80%) náhrady mzdy proplácena státem.</li>
+  <li>Program Antivirus je ale schválen jak program krátkodobý a nezakládá právní jistotu a předvídatelnost do dalších měsíců.</li>
+  <li>Náhrada mzdy za dobu karantény jednotlivých zaměstnanců musí být proplácena státem i v dlouhodobém horizontu.</li>
+  <li>Zaměstnavatelé tak mohou své zaměstnance od čerpání karantény až odrazovat.</li>
+  <li>Chceme všechny povinně motivovat k tomu, aby byla pravidla pro ochranu veřejného zdraví dodržovat a nikdo na tom “netratil”. Jak zaměstnanci tak zaměstnavatelé → stát by měl převzít náklady na nemocenskou v případě karantény již od 1. dne nemoci.</li>
+</ul>
+
+<h3>Podpora práce na dálku</h3>
+<ul>
+  <li>Umožnění práce na dálku ve veřejné sféře včetně zastupitelů (možnost jednání výborů měst vzdáleně, hlasování per rollam například po e-mailu).</li>
+  <li>Snížit pohyb lidí na úřadech (podpořit zřízení datových schránek - novela MOJE daně odstraňuje povinnost používat na vše zřízené datové schránky).</li>
+  <li>Zvážit dočasné umožnění práce z domu i u prací, kde to jinak neumožňují bezpečnostní a jiné pracovní předpisy a zákony.</li>
+  <li>Umožnit zaměstnancům pracovní volno na zvyšování kvalifikace například pomocí online kurzů.</li>
+</ul>
