--- a/test/skolstvi.html
+++ b/test/skolstvi.html
@@ -29,6 +29,16 @@ layout: default
   </div>
 </div>
 
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
+
                 <h3>Články k tématu:</h3>
 
                   {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","školství"  %}
