--- a/test/ekonomika.html
+++ b/test/ekonomika.html
@@ -29,6 +29,16 @@ layout: default
   </div>
 </div>
 
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
+                  
 Piráti usilují o co nejrychlejší efektivní pomoc všem postiženým skupinám obyvatel. Soustředíme se zejména na pomoc lidem, na které vláda zapomíná a na pomoc živnostníkům, za které nekopou žádné svazy asociace a jiné profesní organizace.
 
 Ekonomické úlevy dle návrhu Pirátů
