--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -105,8 +105,24 @@ layout: default
 </ul>
       
                 </div>
-              </div>
+              </div>              
+            </article>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+</div>
 
+<hr/>
+
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
               <div class="row">
 
                 <div class="columns medium-12">
