--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -41,7 +41,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Zdravotnictví</h2>
-                <p>"Děkuji všem zdravotníkům, kteří stojí v první linii v boji proti koronaviru. Je nezbytné, abychom dohlédli na všechny kroky, které nás čekají. Dostupnost ochranných pomůcek, nejlépe od českých firem, dostatečná protestovanost a také aby neselhalo financování zdravotnictví v následujících měsících."</p>
+                <p><em>"Děkuji všem zdravotníkům, kteří stojí v první linii v boji proti koronaviru. Je nezbytné, abychom dohlédli na všechny kroky, které nás čekají. Dostupnost ochranných pomůcek, nejlépe od českých firem, dostatečná protestovanost a také aby neselhalo financování zdravotnictví v následujících měsících."</em></p>
                 <h5 class="l-prg__garant-name">Ing. Petr Třešňák, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
                   <img src="/assets/img/peoples/tresnak-petr.png" alt="Ing. Petr Třešňák"/>
                 </div></h5>
@@ -49,7 +49,7 @@ layout: default
 
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
-                    <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>
+                    <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />
                   </div>
                 </div>
               </div>
