--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -21,18 +21,16 @@ layout: default
   </div>
 </nav>
 
-
 <div class="row" style="text-align: center">
-
-  <div class="l-prg__content columns medium-12 text-left pull-right">  
-    <h1>Naše řešení pro zdravotnictví</h1>
-    <h2 class="t-h4-alt">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>zdravotnictví</strong>:</h2>                  
+  <div class="medium-10 large-12 columns">
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro zdravotnictví</h1>
+    <div class="l-program__lead">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>zdravotnictví</strong>:</div>
   </div>
-                <div class="l-prg__stats columns medium-2">
-                  <div class="l-prg__stats-done">
-                    <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />
-                  </div>
-                </div>  
+  <div class="l-prg__stats columns medium-2">
+    <div class="l-prg__stats-done">
+      <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />
+    </div>
+  </div>  
 </div>
 
 <hr/>
