--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -23,8 +23,8 @@ layout: default
 
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
-    <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" />
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro zdravotnictví</h1>
+    
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro zdravotnictví <img src="/assets/img/icons/a01_ochranne_pomucky.png" style="width: 80px;padding: 20px" /></h1>
     <div class="l-program__lead">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>zdravotnictví</strong>:</div>
   </div>
 </div>
