--- a/test/exekuce.html
+++ b/test/exekuce.html
@@ -41,8 +41,8 @@ layout: default
                 <div class="l-prg__content columns medium-12 text-left pull-right">
                 <h2 class="l-prg__card-title">Dluhy, exekuce, insolvence</h2>
                 <p><em>"Ano poctivému placení dluhů. Ne dlužnímu otroctví."</em></p>
-                <h5 class="l-prg__garant-name">Lukáš Kolářík, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="/assets/img/peoples/tresnak-petr.png" alt="Ing. Petr Třešňák"/>
+                <h5 class="l-prg__garant-name">Lukáš Kolářík, poslanec Parlamentu České republiky <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="/assets/img/peoples/kolarik-lukas.png" alt="Lukáš Kolářík"/>
                 </div></h5>
                 </div>
               </div>
@@ -66,16 +66,6 @@ layout: default
 <p>Je třeba jednat s ministerstvem spravedlnosti kvůli obzvlášť obtížné situaci těchto osob v průběhu současné krize. Pro lidi v insolvenci je útlum pracovní činnosti rizikem s horším dopadem než pro lidi v exekuci. Mohou přijít o oddlužení a vrátit se do bodu nula před vstupem do insolvence. Navrhujeme proto přerušení insolvenčního řízení dle nově přijaté právní úpravy insolvenčního zákona i na insolvence zahájené před přijetím novelizace. [§412b](https://www.google.com/url?q=https://www.zakonyprolidi.cz/cs/2006-182?text%3D%25C2%25A7412b%23f6383060&sa=D&ust=1586788455957000) Insolvenčního zákona. ( připraven [PN](https://www.google.com/url?q=https://docs.google.com/document/d/1phdwv4m6mBkayWRfMpYtV11tXJICE4hF6GN212aQ92M/edit&sa=D&ust=1586788455957000) )</p>
 <p>Rovněž apelujeme na Ministerstvo spravedlnosti, aby přeběhlo povinnou implementaci evropské směrnice o oddlužení OSVČ do maximálně tří let, tyto změny zavedla v co nejkratší lhůtě a vztáhla je i na fyzické osoby.</p>
 
-
-                </div>
-              </div>
-            </article>         
-          </div>
-        </section>
-      </div>
-    </div>
-  </div>
-</div>
 
 <hr/>
 
