--- a/test/exekuce.html
+++ b/test/exekuce.html
@@ -21,12 +21,14 @@ layout: default
   </div>
 </nav>
 
-<div class="pce-hero pce-hero--entry">
-  <div class="pce-hero__content">
-    <h1 class="o-section__heading l-program__heading">Naše řešení pro dluhy, exekuce a insolvence</h1>
-    <h2 class="t-h4-alt">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>dluhy, exekuce a insolvence</strong>:</h2>
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    
+    <h1 class="o-section__heading l-program__heading">Naše řešení pro dluhy, exekuce a insolvence <img src="/assets/img/icons/a01_dluhy.png" style="width: 120px;padding: 20px" /></h1>
+    <div class="l-program__lead">Návrhy Pirátů v souvislosti s <strong>řešením dopadů pandemie COVID-19</strong> pro <strong>dluhy, exekuce a insolvence</strong>:</div>
   </div>
 </div>
+
 
 <hr/>
 
