--- a/test/exekuce.html
+++ b/test/exekuce.html
@@ -68,7 +68,8 @@ layout: default
 <p>Je třeba jednat s ministerstvem spravedlnosti kvůli obzvlášť obtížné situaci těchto osob v průběhu současné krize. Pro lidi v insolvenci je útlum pracovní činnosti rizikem s horším dopadem než pro lidi v exekuci. Mohou přijít o oddlužení a vrátit se do bodu nula před vstupem do insolvence. Navrhujeme proto přerušení insolvenčního řízení dle nově přijaté právní úpravy insolvenčního zákona i na insolvence zahájené před přijetím novelizace. <a href="https://www.google.com/url?q=https://www.zakonyprolidi.cz/cs/2006-182?text%3D%25C2%25A7412b%23f6383060&sa=D&ust=1586788455957000">§412b</a> Insolvenčního zákona. ( připraven <a href="https://www.google.com/url?q=https://docs.google.com/document/d/1phdwv4m6mBkayWRfMpYtV11tXJICE4hF6GN212aQ92M/edit&sa=D&ust=1586788455957000">PN</a></p>
 <p>Rovněž apelujeme na Ministerstvo spravedlnosti, aby přeběhlo povinnou implementaci evropské směrnice o oddlužení OSVČ do maximálně tří let, tyto změny zavedla v co nejkratší lhůtě a vztáhla je i na fyzické osoby.</p>
 
-
+                </div>
+              </div>
 <hr/>
 
               <div class="row">
