--- a/test/zdravotnictvi.html
+++ b/test/zdravotnictvi.html
@@ -85,7 +85,12 @@ layout: default
 
                   <table>
                     <tbody>
-
+                      <tr><td>zajistit dostupnost zdravotnického materiálu a ochranných pomůcek</td></tr>
+                      <tr><td>nastavit jasný a transparentní harmonogram distribuce</td></tr>
+                      <tr><td>využít kapacity domácích výrobců</td></tr>
+                      <tr><td>zajistit / ověřit dostupnost léků v lékárnách a v nemocnicích</td></tr>
+                      <tr><td>realizace pandemického plánu</td></tr>
+                      <tr><td>ocenit zdravotní personál (správné proplácení přesčasů, dostatečný čas na regeneraci)</td></tr>
                     </tbody>
                   </table>
                 </div>
