--- a/test/skolstvi.html
+++ b/test/skolstvi.html
@@ -176,10 +176,10 @@ layout: default
                 <div class="columns medium-6">
                 <h3>Články k tématu:</h3>
 
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","skolstvi"  %}
+                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","školství"  %}
 
                   <ul>
-                  {% for post in sorted-posts limit: 10 %}
+                  {% for post in sorted-posts %}
                     <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
