--- a/test/exekuce.html
+++ b/test/exekuce.html
@@ -65,33 +65,38 @@ layout: default
 <p>Zcela zásadní je pak plošný zákaz mobiliárních exekucí. Vítáme přístup řady exekutorských úřadů, které výkon mobiliárních exekucí zastavily už teď a apelujeme i na ty zbylé, aby tak rovněž učinily. Tímto přístupem je limitován přenos virového onemocnění.</p>                 
                  
 <h4>Insolvence</h4>
-<p>Je třeba jednat s ministerstvem spravedlnosti kvůli obzvlášť obtížné situaci těchto osob v průběhu současné krize. Pro lidi v insolvenci je útlum pracovní činnosti rizikem s horším dopadem než pro lidi v exekuci. Mohou přijít o oddlužení a vrátit se do bodu nula před vstupem do insolvence. Navrhujeme proto přerušení insolvenčního řízení dle nově přijaté právní úpravy insolvenčního zákona i na insolvence zahájené před přijetím novelizace. <a href="https://www.google.com/url?q=https://www.zakonyprolidi.cz/cs/2006-182?text%3D%25C2%25A7412b%23f6383060&sa=D&ust=1586788455957000"target="_blank" rel="noopener">§412b Insolvenčního zákona</a>. (připraven <a href="https://www.google.com/url?q=https://docs.google.com/document/d/1phdwv4m6mBkayWRfMpYtV11tXJICE4hF6GN212aQ92M/edit&sa=D&ust=1586788455957000"target="_blank" rel="noopener">PN</a></p>
+<p>Je třeba jednat s ministerstvem spravedlnosti kvůli obzvlášť obtížné situaci těchto osob v průběhu současné krize. Pro lidi v insolvenci je útlum pracovní činnosti rizikem s horším dopadem než pro lidi v exekuci. Mohou přijít o oddlužení a vrátit se do bodu nula před vstupem do insolvence. Navrhujeme proto přerušení insolvenčního řízení dle nově přijaté právní úpravy insolvenčního zákona i na insolvence zahájené před přijetím novelizace. <a href="https://www.google.com/url?q=https://www.zakonyprolidi.cz/cs/2006-182?text%3D%25C2%25A7412b%23f6383060&sa=D&ust=1586788455957000"target="_blank" rel="noopener">§412b Insolvenčního zákona</a>. (připraven <a href="https://www.google.com/url?q=https://docs.google.com/document/d/1phdwv4m6mBkayWRfMpYtV11tXJICE4hF6GN212aQ92M/edit&sa=D&ust=1586788455957000"target="_blank" rel="noopener">PN</a>).</p>
 <p>Rovněž apelujeme na Ministerstvo spravedlnosti, aby přeběhlo povinnou implementaci evropské směrnice o oddlužení OSVČ do maximálně tří let, tyto změny zavedla v co nejkratší lhůtě a vztáhla je i na fyzické osoby.</p>
 
                 </div>
               </div>
 <hr/>
 
+              <div class="l-prg__stats columns medium-2">
+                  <div class="l-prg__stats-done">
+                    <a href="exekuce.html"><img src="/assets/img/icons/a01_dluhy.png" style="padding: 20px" /></a>
+                    <!--<svg width="100%" height="150px" viewBox="0 0 42 42" class="f-donut">
+                    <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                    <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#d2d3d4" stroke-width="3"></circle>
+                    <path transform="translate(12,11) scale(.75)" d="M7.458 8.084l.405-.916c.694-1.565 1.591-3.592 2.754-6.265.258-.592.881-.906 1.397-.888.572.015 1.126.329 1.369.888 1.163 2.673 2.06 4.7 2.754 6.265l.405.916c.375-.936.806-2.016 1.3-3.267.204-.518.67-.806 1.17-.802.482.004.941.284 1.146.802.873 2.209 1.547 3.885 2.069 5.179 1.571 3.91 1.773 4.413 1.773 5.603 0 2.388-1.42 4.402-3.5 5.04v2.39h3.5v1h-24v-1h3.5v-2.39c-2.08-.638-3.5-2.652-3.5-5.04 0-1.19.202-1.693 1.774-5.603.521-1.294 1.195-2.97 2.068-5.179.204-.518.67-.806 1.17-.802.482.004.941.284 1.146.802.494 1.251.925 2.331 1.3 3.267zm7.915 11.197c-.569.331-1.199.581-1.873.733v3.015h4v-2.39c-.83-.254-1.555-.728-2.127-1.358zm-6.746 0c-.572.63-1.297 1.104-2.127 1.358v2.39h4v-3.015c-.674-.152-1.304-.402-1.873-.733zm3.873 3.734v-3.839c4.906-.786 5-4.751 5-5.244 0-1.218-.216-1.705-2.277-6.359-2.134-4.82-2.721-6.198-2.755-6.261-.079-.145-.193-.292-.455-.297-.238 0-.37.092-.481.297-.034.063-.621 1.441-2.755 6.261-2.061 4.654-2.277 5.141-2.277 6.359 0 .493.094 4.458 5 5.244v3.839h1zm-5.606-13.65c-1.264-3.153-1.639-4.117-1.664-4.167-.072-.151-.15-.226-.226-.228-.109 0-.188.13-.235.228-.028.05-.316.818-2.066 5.171-1.542 3.833-1.703 4.233-1.703 5.23 0 1.988 1.076 3.728 3.5 4.25v3.166h1v-3.166c.975-.209 1.729-.615 2.282-1.152-1.409-1.152-2.282-2.868-2.282-4.765 0-1.17.18-1.789 1.394-4.567zm9.323 9.332c.556.538 1.311.943 2.283 1.152v3.166h1v-3.166c2.448-.527 3.5-2.29 3.5-4.25 0-.997-.161-1.397-1.703-5.23-1.589-3.957-2.04-5.116-2.067-5.171-.072-.151-.15-.226-.226-.228-.109 0-.188.13-.235.228-.026.046-.27.697-1.663 4.167 1.214 2.778 1.394 3.397 1.394 4.567 0 1.897-.873 3.613-2.283 4.765z"/>
+                    </svg>-->
+                  </div>
+                </div>
+              </div>
+
               <div class="row">
                 <div class="columns medium-6">
                   <h3>Co prosazují Piráti:</h3>
 
                   <table>
-                    <thead>
-                      <tr><th>Název</th></tr>
-                    </thead>
                     <tbody>
-                    <tr><td>Žádosti o podporu a dávky elektronicky, bez elektronického podpisu</td></tr>
-                    <tr><td>Změnit možnosti využití dávky mimořádné okamžité pomoci i pro fyzické osoby s náhlým propadem příjmů (s dokládáním za aktuální měsíc)</td></tr>
-                    <tr><td>Definovat postup pro lidi bez domova v karanténě</td></tr>
-                    <tr><td>Umožnit krátkodobé převedení zaměstnanců sociálních služeb dle aktuálních potřeb</td></tr>
-                    <tr><td>Podpora pro lidi pracující na DPČ a DPP</td></tr>
-                    <tr><td>Podpora pro lidi s hendikepem, kterým se zhoršila dostupnost asistenčních a dalších služeb.</td></tr>
-                    <tr><td>Podpora pro lidi s nízkými invalidními důchody</td></tr>
-                    <tr><td>Podpora pro OBZP</td></tr>
-                    <tr><td>Nastavit pravidla pro fungování nocleháren, azylových domů apod</td></tr>
-                    <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni.</td></tr>
-                    <tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi.</td></tr>
+                    <tr><td>Plošné zastavení nařizování exekucí, případně zastavení mobiliárních exekucí</td></tr>
+                    <tr><td>Místní příslušnost exekutorů: princip 1 dlužník = 1 exekutor v místě bydliště</td></tr>
+                    <tr><td>Splácet nejdřív jistinu pak úrok</td></tr>
+                    <tr><td>Zvýšení minimální jistiny pro dražbu obydlí ze 30 tisíc na 100 tisíc korun</td></tr>
+                    <tr><td>Snížení státem uvalené daně z přidané hodnoty na odměny exekutorů</td></tr>
+                    <tr><td>Zastavování tzv. “nevymožitelných exekucí,” kde se za poslední 3 roky nepodařilo nic vymoci</td></tr>
+                    <tr><td>Vznik chráněného bankovního účtu</td></tr>
                     </tbody>
                   </table>
                 </div>
@@ -102,17 +107,17 @@ layout: default
                   {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","exekuce"  %}
 
                   <ul>
-                  {% for post in sorted-posts %}
+                  {% for post in sorted-posts limit: 10 %}
                     <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
                   {% endfor %}
                   </ul>
                 </div>
               </div>
 
-              <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="uvodni.html">Zpět</a>
-              </div>
-            </article>         
+              <div class="pce-hero__cta">
+                  <a class="pce-hero__cta-item button large" href="exekuce.html">Zobrazit naše řešení exekucí</a>
+              </div>              
+            </article>
           </div>
         </section>
       </div>
