--- a/test/ekonomika.html
+++ b/test/ekonomika.html
@@ -40,20 +40,16 @@ layout: default
             <article class="l-prg__card">
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
-                <h2 class="l-prg__card-title">Naše řešení pro ekonomiku</h2>
-                <p><em>"Děkuji všem zdravotníkům, kteří stojí v první linii v boji proti koronaviru. Je nezbytné, abychom dohlédli na všechny kroky, které nás čekají. Dostupnost ochranných pomůcek, nejlépe od českých firem, dostatečná protestovanost a také aby neselhalo financování zdravotnictví v následujících měsících."</em></p>
-                <h5 class="l-prg__garant-name">Ing. Petr Třešňák, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
-                  <img src="/assets/img/peoples/tresnak-petr.png" alt="Ing. Petr Třešňák"/>
+                <h2 class="l-prg__card-title">Ekonomika a finance</h2>
+                <p><em>Piráti usilují o co nejrychlejší efektivní pomoc všem postiženým skupinám obyvatel. Soustředíme se zejména na pomoc lidem, na které vláda zapomíná a na pomoc živnostníkům, za které nekopou žádné svazy asociace a jiné profesní organizace.</em></p>
+                <h5 class="l-prg__garant-name">Mikuláš Ferjenčík, poslanec Parlamentu České republiky  <div class="l-kan__item-img l-prg__garant-img">
+                  <img src="/assets/img/peoples/ferjencik-mikulas.png" alt="Mikuláš Ferjenčík"/>
                 </div></h5>
                 </div>
               </div>
              
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
-__
-Piráti usilují o co nejrychlejší efektivní pomoc všem postiženým skupinám obyvatel. Soustředíme se zejména na pomoc lidem, na které vláda zapomíná a na pomoc živnostníkům, za které nekopou žádné svazy asociace a jiné profesní organizace.
-
-Mikuláš Ferjenčík
 
 <h3>Ekonomické úlevy dle návrhu Pirátů</h3>
 
