--- a/test/exekuce.html
+++ b/test/exekuce.html
@@ -102,10 +102,10 @@ layout: default
                 </div>
               </div>
 
-              <div class="pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="exekuce.html">Zobrazit naše řešení exekucí</a>
-              </div>              
-            </article>
+              <div class="medium-12 pce-hero__cta">
+                  <a class="pce-hero__cta-item button large" href="uvodni.html">Zpět</a>
+              </div>
+            </article>         
           </div>
         </section>
       </div>
