--- a/test/skolstvi.html
+++ b/test/skolstvi.html
@@ -111,28 +111,6 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-### Co prosazují Piráti:
-
--   Zachování dvou termínů u přijímacích zkoušek na SŠ
--   Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ
--   Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení
--   Výukové skupiny pro znevýhodněné žáky
--   Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin
--   Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize
--   Revize a úprava rozpočtu v oblasti školství
--   Kontrola smysluplnosti škrtů ve financích na vědu a výzkum
--   Elektronické zápisy do škol
-
-                  
-                </div>
-              </div>
-            </article>         
-          </div>
-        </section>
-      </div>
-    </div>
-  </div>
-</div>
 
 <hr/>
 
@@ -151,24 +129,22 @@ layout: default
 
               <div class="row">
                 <div class="columns medium-6">
-                  <h3>Základní body:</h3>
+                  <h3>Co prosazují Piráti:</h3>
 
                   <table>
                     <thead>
                       <tr><th>Název</th></tr>
                     </thead>
                     <tbody>
-                    <tr><td>Žádosti o podporu a dávky elektronicky, bez elektronického podpisu</td></tr>
-                    <tr><td>Změnit možnosti využití dávky mimořádné okamžité pomoci i pro fyzické osoby s náhlým propadem příjmů (s dokládáním za aktuální měsíc)</td></tr>
-                    <tr><td>Definovat postup pro lidi bez domova v karanténě</td></tr>
-                    <tr><td>Umožnit krátkodobé převedení zaměstnanců sociálních služeb dle aktuálních potřeb</td></tr>
-                    <tr><td>Podpora pro lidi pracující na DPČ a DPP</td></tr>
-                    <tr><td>Podpora pro lidi s hendikepem, kterým se zhoršila dostupnost asistenčních a dalších služeb.</td></tr>
-                    <tr><td>Podpora pro lidi s nízkými invalidními důchody</td></tr>
-                    <tr><td>Podpora pro OBZP</td></tr>
-                    <tr><td>Nastavit pravidla pro fungování nocleháren, azylových domů apod</td></tr>
-                    <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni.</td></tr>
-                    <tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi.</td></tr>
+                    <tr><td>Zachování dvou termínů u přijímacích zkoušek na SŠ</td></tr>
+                    <tr><td>Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ</td></tr>
+                    <tr><td>Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení</td></tr>
+                    <tr><td>Výukové skupiny pro znevýhodněné žáky</td></tr>
+                    <tr><td>Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin</td></tr>
+                    <tr><td>Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize</td></tr>
+                    <tr><td>Revize a úprava rozpočtu v oblasti školství</td></tr>
+                    <tr><td>Kontrola smysluplnosti škrtů ve financích na vědu a výzkum</td></tr>
+                    <tr><td>Elektronické zápisy do škol</td></tr>
                     </tbody>
                   </table>
                 </div>
