--- a/test/socialni-dopady.html
+++ b/test/socialni-dopady.html
@@ -84,16 +84,20 @@ layout: default
 
 <p>Pro administraci dávek je nutné umožnit podat žádost distančně, ne jen přes datovou schránku či s elektronickým podpisem! Je třeba omezit velké shlukování lidí na Úřadech práce. Lidé (dohodáři) dostávají výpovědi od zaměstnavatelů, ÚP ale fungují v omezeném režimu. Navrhli jsme proto následující opatření:
 
--   Příjem žádostí poštou, i emailovou, i bez elektronického podpisu. Tuto možnost považujeme za klíčovou i pro ošetřování člena rodiny (OČR). => UMOŽNĚNO
--   Oceňujeme instrukci pro příjem podkladů pro vyhodnocení nároku do schránek umístěných zvnějšku budov ÚP. Navrhujeme využít schránky i pro samotný příjem žádostí. To by připadalo v úvahu, pokud by ÚP podobně jako v případě žádostí o OČR strpěl jen běžný podpis na vytištěné žádosti podané do schránek na ÚP, nebo na žádosti zaslané poštou nebo naskenované a podané mailem. => UMOŽNĚNO
--   Individuální oslovení rodičů na mateřské či rodičovské, případně i dalších žadatelů o dávky, aby vše řešili elektronicky.
+<ul>
+  <li>Příjem žádostí poštou, i emailovou, i bez elektronického podpisu. Tuto možnost považujeme za klíčovou i pro ošetřování člena rodiny (OČR). => UMOŽNĚNO</li>
+  <li>Oceňujeme instrukci pro příjem podkladů pro vyhodnocení nároku do schránek umístěných zvnějšku budov ÚP. Navrhujeme využít schránky i pro samotný příjem žádostí. To by připadalo v úvahu, pokud by ÚP podobně jako v případě žádostí o OČR strpěl jen běžný podpis na vytištěné žádosti podané do schránek na ÚP, nebo na žádosti zaslané poštou nebo naskenované a podané mailem. => UMOŽNĚNO</li>
+  <li>Individuální oslovení rodičů na mateřské či rodičovské, případně i dalších žadatelů o dávky, aby vše řešili elektronicky.</li>
+</ul>
 
-<p>Vítáme, že ÚP zveřejnil doporučení pro klienty, aby vyřídili své žádosti on-line.
+<p>Vítáme, že ÚP zveřejnil doporučení pro klienty, aby vyřídili své žádosti on-line.</p>
 
--   Na Úřadech práce začnou nebezpečné situace po 1. dubnu, což je datum, kdy si opět občané, co pobírají přídavek na dítě, příspěvek na bydlení, příspěvek na živobytí a doplatek na bydlení, tedy nízké statisíce lidí, musí přijít požádat. Některá pracoviště mají malé kanceláře a malé čekárny, některá jsou halového typu. Tedy potřebné rozestupy mezi osobami nelze dodržet.
--   Navrhli jsme proto pokračovat ve výplatách tak, jak je podáno v I. kvartále - tedy prodloužit pobírání těchto dávek o další období, to je v případě přídavku na dítě a příspěvku na bydlení 3 měsíce a příspěvku na živobytí a doplatku na bydlení 1 měsíc bez nutnosti návštěvy ÚP. A již podané žádosti vyřídit dodatečně. Je na druhou stranu zřejmé, že hrozí přeplatky na dávce a zadlužení přednostní pohledávkou vůči státu, čili že neexistuje snadné řešení.
-=> UMOŽNĚNO pokračovat v čerpání přídavku na dítě, příspěvku na bydlení a příspěvku na péči bez nutnosti dokládat znovu běžně požadovaných podkladů za předchozí období pro přiznání dávky (tedy ani příjmy ani výdaje) a výše této dávky bude stejná jako v lednu až březnu 2020.
-
+<ul>
+  <li>Na Úřadech práce začnou nebezpečné situace po 1. dubnu, což je datum, kdy si opět občané, co pobírají přídavek na dítě, příspěvek na bydlení, příspěvek na živobytí a doplatek na bydlení, tedy nízké statisíce lidí, musí přijít požádat. Některá pracoviště mají malé kanceláře a malé čekárny, některá jsou halového typu. Tedy potřebné rozestupy mezi osobami nelze dodržet.</li>
+  <li>Navrhli jsme proto pokračovat ve výplatách tak, jak je podáno v I. kvartále - tedy prodloužit pobírání těchto dávek o další období, to je v případě přídavku na dítě a příspěvku na bydlení 3 měsíce a příspěvku na živobytí a doplatku na bydlení 1 měsíc bez nutnosti návštěvy ÚP. A již podané žádosti vyřídit dodatečně. Je na druhou stranu zřejmé, že hrozí přeplatky na dávce a zadlužení přednostní pohledávkou vůči státu, čili že neexistuje snadné řešení.</li>
+  <li>Bylo => UMOŽNĚNO pokračovat v čerpání přídavku na dítě, příspěvku na bydlení a příspěvku na péči bez nutnosti dokládat znovu běžně požadovaných podkladů za předchozí období pro přiznání dávky (tedy ani příjmy ani výdaje) a výše této dávky bude stejná jako v lednu až březnu 2020.</li>
+</ul>
+                 
 <h4>Mimořádná okamžitá pomoc</h4>
 <p>Navrhujeme změnit možnosti využití dávky mimořádné okamžité pomoci (především jako prevence ztráty bydlení), aby mohla sloužit i fyzickým osobám s náhlým propadem příjmů tam, kde by nebylo možné dosáhnout na jiné dávky:
 
