--- a/test/socialni-dopady.html
+++ b/test/socialni-dopady.html
@@ -35,7 +35,7 @@ layout: default
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
     <p>Ucelený <b>přehled sociálních dávek</b> a jednoduché vodítko, na jakou podporu od státu byste mohli mít nárok, najdete na našem webu:</p>
-    <p><a href="https://www.google.com/url?q=https://socialnisystem.pirati.cz/&sa=D&ust=1586788455959000" target="_blank" rel="noopener">socialnisystem.cz</a></p>
+    <p><b><a href="https://www.google.com/url?q=https://socialnisystem.pirati.cz/&sa=D&ust=1586788455959000" target="_blank" rel="noopener">socialnisystem.cz</a></b></p>
   </div>
 </div>
 
