--- a/test/uvodni.html
+++ b/test/uvodni.html
@@ -186,6 +186,18 @@ margin-left: 1rem;"/>
 <hr/>
 
 -->
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <h2 class="l-prg__card-title">Zdravotnictví</h2>
+                  </div>                  
+
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
                     <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>
@@ -239,6 +251,18 @@ margin-left: 1rem;"/>
 </div>
 
 <hr/>
+
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <h2 class="l-prg__card-title">Ekonomika a finance</h2>
+                  </div>
 
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
@@ -296,6 +320,18 @@ margin-left: 1rem;"/>
 
 <hr/>
 
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <h2 class="l-prg__card-title">Dluhy, exekuce, insolvence</h2>
+                  </div>
+
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
                     <a href="exekuce.html"><img src="/assets/img/icons/a01_dluhy.png" style="padding: 20px" /></a>
@@ -350,6 +386,18 @@ margin-left: 1rem;"/>
 </div>
 
 <hr/>
+
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">       
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-10 text-left pull-right">
+                <h2 class="l-prg__card-title">Sociální dopady</h2>
+                  </div>
 
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
@@ -421,8 +469,6 @@ margin-left: 1rem;"/>
                 <div class="l-prg__content columns medium-10 text-left pull-right">
                 <h2 class="l-prg__card-title">Školství</h2>
                                   </div>
-
-
 
                 <div class="l-prg__stats columns medium-2">
                   <div class="l-prg__stats-done">
